--- a/style.css
+++ b/style.css
@@ -1,6 +1,5 @@
 body
 {
-    background-color:lightcyan;
     font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     font-weight: 500;
     font-style: italic;
@@ -63,8 +62,9 @@ button{
     flex-direction:column;
     justify-content: center;
     align-items: center;
-    padding:100px;
-
+    padding:30px;
+    font-variant: small-caps;
+    margin-bottom: 100px;
 }
 .treasure-coins
 {
@@ -122,28 +122,7 @@ button{
 .won-game
 {
     width: 250px;
-    height: 200px;
-    padding-top: 30px;
-    background:blueviolet;
-    margin-left: 700px;
-    animation-name: game-over;
-    animation-duration:10s;
-    animation-iteration-count: 1;
-    animation-fill-mode: forwards;
-    color:white;
-    display: flex;
-    justify-content: center;
-    font-size: larger;
-    font-weight: 600;
-    background-image:url("./assets/won.png") ;
-    position: absolute;
-}
-
-.lost-game
-{
-    width: 250px;
     height: 300px;
-    padding-top: 0px;
     margin-left: 700px;
     position: absolute;
     animation-name: game-over;
@@ -156,7 +135,29 @@ button{
     justify-content: center;
     font-size: larger;
     font-weight: 600;
-    background-image:url("./assets/lost.jpg") ;
+    background-image:url("./assets/won.jpg") ;
+    background-repeat: no-repeat;
+}
+
+.lost-game
+{
+    width: 250px;
+    height: 200px;
+    margin-left: 700px;
+    position: absolute;
+    animation-name: game-over;
+    animation-duration: 4s;
+    animation-iteration-count: 1;
+    animation-fill-mode: forwards;
+    background-color: white;
+    padding-top: 30px;
+    color:black;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    font-size: larger;
+    font-weight: 600;
+    background-image:url("./assets/lost.png") ;
     background-repeat: no-repeat;
 }
 .treasure-cell
@@ -172,4 +173,19 @@ button{
     justify-content: center;
     align-items: center;
     
+}
+.game-rules
+{
+    padding:6px;
+    margin: 10px;
+    margin-left: 300px;
+    height: 50px;
+    width:800px;
+    border-radius: 10px;
+    background-color: blueviolet;
+    border: 2px solid blueviolet;
+    color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
